# rust-unit-testing

./: .gitignore  Cargo.toml  README.md
2/end_fake/: Cargo.toml
2/end_lazy_static/: Cargo.toml
2/end_lazy_static/src/: main.rs
2/end_mockall/: Cargo.toml
2/end_mockall/src/: main.rs
2/end_rust_modules/: Cargo.toml
2/end_rust_modules/src/: main.rs
2/end_sqlx/: .env  Cargo.toml  docker-compose.yml
2/end_sqlx/migrations/: 0001_core_tables.sql
2/end_sqlx/src/: main.rs
2/start_fake/: Cargo.toml
2/start_fake/src/: main.rs
2/start_lazy_static/: Cargo.toml
2/start_lazy_static/src/: main.rs
2/start_mockall/: Cargo.toml
2/start_mockall/src/: main.rs
2/start_rust_modules/: Cargo.toml
2/start_sqlx/: Cargo.toml
2/start_sqlx/src/: main.rs
bonus/twitter-api/: Cargo.toml  README.md
final/twitter-api/: .gitignore  .prettierrc.toml  Cargo.toml
final/twitter-api/src/: lib.rs
final/twitter-api/src/common/: app_state.rs
final/twitter-api/src/common/entities/base/: mod.rs
final/twitter-api/src/common/entities/circle_group/: repo.rs
final/twitter-api/src/common/entities/messages/: repo.rs
final/twitter-api/src/common/entities/profiles/: mod.rs  model.rs  repo.rs
final/twitter-api/src/common_tests/: actix_fixture.rs
final/twitter-api/src/routes/messages/: message_route.rs
final/twitter-api/src/routes/profiles/: model.rs  profile_route.rs
final/twitter-api/tests/common/entities/messages/: repo_test.rs
final/twitter-api/tests/routes/messages/: message_route_test.rs
final/twitter-api/tests/routes/profiles/: profile_route_test.rs
(+6 files in other folders)
