[package]
name = "twitter-clone-api"
version = "0.1.0"
edition = "2021"
authors = ["David Choi"]
description = "Simple api server for Chatter"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server-rs"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
async-trait = "0.1.67"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
fake = { version = "2.6.1", features=['derive']}
futures = "0.3.28"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
serde_repr = "0.1.12"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
